--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,17 @@
     box-sizing: border-box;
 }
 
+
+header {
+    background-image: url('../img/pattern.png');
+    background-color: rgb(78, 160, 255);
+    background-repeat: repeat;
+    background-size: 40%;
+    padding: 20px 40px;
+}
+
+header img {
+    width: 25%;
+}
+
+
