--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,26 @@ header img {
     width: 20%;
 }
 
+/* Contenuto iniziale */
+main  {
+    width: 80%;
+    margin: auto;
+}
+
+main #first-part h1{
+    font-size: 50px;
+    font-weight: 900;
+}
+
+main #first-part p {
+    font-size: 20px;
+}
+
+main #first-part p .author {
+    color: rgb(55, 176, 232);
+}
+
+
 
 
 
