--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,12 @@ main #first-part h1{
 }
 
 main #first-part p {
+    color: rgb(183, 183, 183);
     font-size: 20px;
+}
+
+#first-part .date {
+    color: rgb(183, 183, 183);
 }
 
 main #first-part p .author {
