--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,8 +61,41 @@ table {
 #table-part thead {
     background-color: rgb(78, 160, 255);
     color: white;
-
 }
+
+table .first-column {
+    padding: 20px;
+}
+
+table .second-column {
+    padding: 20px;
+}
+
+
+
+#table-part #first-row  {
+    background-color: lightblue;
+}
+
+#table-part #third-row {
+    background-color: lightblue;
+}
+
+footer {
+    width: 80%;
+    margin: auto;
+}
+
+footer .more {
+    font-size: 20px;
+    color: rgb(183, 183, 183);
+}
+
+
+
+
+
+
 
 
 
