--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,16 +63,34 @@ table {
 #table-part thead {
     background-color: rgb(78, 160, 255);
     color: white;
+    line-height: left;
 }
 
+#left-row {
+    text-align: left;
+}
+
+#center-row {
+    text-align: left;
+}
+
+#right-row {
+    text-align: left;
+}
+
+#first-row .third-column {
+    text-align: left;
+    padding: 0;
+    width: 30%;
+}
 table .first-column {
-    padding: 20px;
+    text-align: left;
+    
 }
 
 table .second-column {
-    padding: 20px;
+    text-align: left;
 }
-
 
 
 #table-part #first-row  {
@@ -82,6 +100,8 @@ table .second-column {
 #table-part #third-row {
     background-color: lightblue;
 }
+
+/* Footer finale */
 
 footer {
     width: 80%;
