--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ header .logo {
 main  {
     width: 80%;
     margin: auto;
+    margin-top: 8px;
 }
 
 main #first-part h1{
@@ -59,6 +60,7 @@ main #first-part p {
 /* Tabella */
 table {
     border-spacing: 0;
+    font-weight: 500;
 }
 
 #table-part thead {
@@ -100,6 +102,10 @@ table .second-column {
 
 #table-part #third-row {
     background-color: lightblue;
+}
+
+.second-paragraph {
+    margin-top: 15px;
 }
 
 /* Footer finale */
