--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,17 @@ header {
     background-image: url('../img/pattern.png');
     background-color: rgb(78, 160, 255);
     background-repeat: repeat;
-    background-size: 40%;
+    background-size: 30%;
     padding: 20px 140px;
 }
 
-header .logo {
-    width: 20%;
+ .logo {
+    height: 80px;
+
+}
+
+.container {
+    width: 100%;
     margin: auto;
 }
 
